<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">



    <TextView android:text="@string/my_nanodegree_apps" android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/textView"
        android:textSize="24dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:textAlignment="center"
        android:gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        style="@style/MyButtonStyle"
        android:text="@string/spotify_streamer"
        android:id="@+id/spotifyButton"
        android:onClick="clickSpotify"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />
    <Button
        style="@style/MyButtonStyle"
        android:text="@string/scores_app"
        android:id="@+id/scoresButton"
        android:onClick="clickScoresApp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />
    <Button
        style="@style/MyButtonStyle"
        android:text="@string/library_app"
        android:id="@+id/libraryButton"
        android:onClick="clickLibraryApp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />
    <Button
        style="@style/MyButtonStyle"
        android:text="@string/build_it_bigger"
        android:id="@+id/bibButton"
        android:onClick="clickBuildItBiggerApp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />
    <Button
        style="@style/MyButtonStyle"
        android:text="@string/xyz_reader"
        android:id="@+id/readerButton"
        android:layout_below="@+id/textView"
        android:onClick="clickXYZReader"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />
    <Button
        style="@style/MyButtonStyle"
        android:text="@string/capstone_my_own_app"
        android:id="@+id/capstoneButton"
        android:background="@drawable/button_capstone"
        android:onClick="clickCapstone"/>

</LinearLayout>
